tests/error/abstract_array.gw
#! [contains] arrays of abstract type
var Shred[12] shreds;
